kubernetes/algod-participation/aramid-participation/fi-1-participation/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aramid-participation-mainnet
---
apiVersion: v1
kind: Service
metadata:
  name: aramidmain-participation-service-18081-data
  namespace: aramid-participation-mainnet
spec:
  type: ClusterIP
  selector:
    app: aramid-participation-mainnet
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 28081
      targetPort: 28081
---
apiVersion: v1
kind: Service
metadata:
  name: aramidmain-participation-service-18888-data
  namespace: aramid-participation-mainnet
spec:
  type: ClusterIP
  selector:
    app: aramid-participation-mainnet
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 18888
      targetPort: 18888
---
apiVersion: v1
kind: Service
metadata:
  name: aramidmain-participation-service-18080-data
  namespace: aramid-participation-mainnet
spec:
  type: ClusterIP
  selector:
    app: aramid-participation-mainnet
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 18080
      targetPort: 18080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: participation-node-1
  namespace: aramid-participation-mainnet
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aramid-participation-mainnet
  template:
    metadata:
      labels:
        app: aramid-participation-mainnet
    spec:
      nodeName: s1-k1-fi.a-wallet.net
      terminationGracePeriodSeconds: 3
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: aramid-participation-mainnet
          image: scholtz2/algorand-participation-aramidmain-extended:4.7.2-stable
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2000Mi"
              cpu: "1000m"
            limits:
              memory: "10000Mi"
              cpu: "8000m"
          #command: ["/bin/sh", "-ec", "while :; do date; sleep 60 ; done"]
          command: ["/bin/bash", "/app/run-participation-aramid.sh"]
          ports:
            - containerPort: 28081
              protocol: TCP
            - containerPort: 18888
              protocol: TCP
            - containerPort: 18080
              protocol: TCP

          startupProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 1000
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 100
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
            terminationGracePeriodSeconds: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: algo-aramidmain-participation-vol-root-1
              mountPath: /app/data
            - name: algo-aramidmain-participation-vol-net-1
              mountPath: /app/data/aramidmain-v1.0
      volumes:
        - name: algo-aramidmain-participation-vol-root-1
          persistentVolumeClaim:
            claimName: algo-aramidmain-participation-vol-root-1
        - name: algo-aramidmain-participation-vol-net-1
          persistentVolumeClaim:
            claimName: algo-aramidmain-participation-vol-net-1
