kubernetes/algod-participation/aramid-participation/fi-1-participation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aramidmain-participation-ingress
  namespace: aramid-participation-mainnet
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - aramidmain-participation.fi.biatec.io
      secretName: tls-aramidmain-participation.fi.a-wallet.net
  rules:
    - host: aramidmain-participation.fi.biatec.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aramidmain-participation-service-18888-data
                port:
                  number: 18888
